# micropython

./: .astylerc  .cirrus.yml  .clang-format  .codespellrc  .coveralls.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod  .gitpod.Dockerfile  .gohci.yml  .mailmap  .markdownlint.jsonc  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .rosie.yml  .travis.yml  ACKNOWLEDGEMENTS  ACKNOWLEDGEMENTS.license  AIOBLE_TEST_FIXES.md  ARCHITECTURE_SUPPORT.md  ARDUINO_SUPPORT.md  BERKELEY_DB_SUBMODULE_FIX.md  BLUETOOTH_MULTITEST_RESULTS.md  BOND_PERSISTENCE_FIX_SUMMARY.md  BOND_PERSISTENCE_TEST_ISSUE.md  BRANCH_STATUS_REPORT.md  BTSTACK_BOND_LOADING_QUESTIONS.md  BTSTACK_BOND_PERSISTENCE_FIXES.md  BTSTACK_BOND_PERSISTENCE_INVESTIGATION.md  BTSTACK_BOND_PERSISTENCE_RESEARCH.md  BUG_FIXES_SESSION2.md  BUG_FIXES_SESSION2_PART2.md  BUG_FIXES_SESSION3.md  BUG_FIX_QUICK_REFERENCE.md  BUILDING.md  BUILD_ENVIRONMENT.md  (+118 more)
.circleci/: config.yml
.claude/: settings.local.json
.codespell/: exclude-file.txt  ignore-words.txt
.devcontainer/: Readme.md  common_tools.sh  cortex-m-toolchain.sh  devcontainer.json  esp-idf-toolchain.sh  fetch-port-submodules.sh  install_build_env.sh  make-mpy-cross.sh  post_create.sh
.github/: FUNDING.yml  auto-comment.yml  dependabot.yml  membrowse-targets.json  pull_request_template.md  state.yml
.semaphore/: cc3200.sh  esp32.sh  get-img-tag.sh  nrf.sh  qemu-arm.sh  restore-docker-img.sh  samd.sh  semaphore.yml  stm32.sh  unix-nanobox.sh  unix-stackless.sh  unix-standard.sh  windows.sh
Dockerfile/: Dockerfile  README.md
atmel-samd/: .gitattributes  Makefile  README.md  README.rst  access_vfs.c  access_vfs.h  adc.c  autoreload.c  autoreload.h  autoreset.c  autoreset.h  background.c  background.h  fatfs_port.c  flash_api.c  flash_api.h  frozentest.mpy  internal_flash.c  internal_flash.h  main.c  modmachine.c  modmachine_adc.c  modmachine_adc.h  modmachine_dac.c  modmachine_pin.c  modmachine_pin.h  modmachine_pwm.c  modmachine_pwm.h  modneopixel_write.c  moduos.c  modutime.c  mpconfigport.h  mpconfigport.mk  mpdac.c  mpdac.h  mphalport.c  mphalport.h  neopixel_status.c  neopixel_status.h  pin.c  (+31 more)
bare-arm/: Makefile  main.c  mpconfigport.h  stm32f405.ld
bare-rpi/: Makefile  README.md  interactive.py  irq.c  irq.h  kernel.ld  main.c  module_cdebug.c  module_cio.c  module_rawptr.c  mpconfigport.h  platform.h  qemu.ld  qemu_start.s  rpi.ld  startqemu.sh  startup_rpi.s  syscalls.c  uart.c  uart.h
cc3200/: CC3200.ccxml  Makefile  README.md  application.lds  (+13 more)
examples/embedding/: .gitignore  CMakeLists.txt  Makefile  Makefile.upylib  README  README.md  hello-embed.c  main.c  makefile.mk  micropython_embed.mk  mpconfigembed.h  mpconfigport.h  mpconfigport_minimal.h  qstrdefsembed.h
examples/zvm/: CMakeLists.txt  Makefile  Makefile.upylib  Makefile.win  mpconfigport.h  test-tvm  test-tvm.c
examples/zvm/py/: coin.py
frozen/Adafruit_CircuitPython_SSD1680/: .pylintrc  .readthedocs.yaml  CODE_OF_CONDUCT.md  README.rst  adafruit_ssd1680.py  optional_requirements.txt  pyproject.toml  requirements.txt
frozen/Adafruit_CircuitPython_SSD1680/.github/workflows/: build.yml
frozen/Adafruit_CircuitPython_SSD1680/docs/: api.rst  conf.py  examples.rst  index.rst  index.rst.license  requirements.txt
frozen/Adafruit_CircuitPython_SSD1680/examples/: ssd1680_simpletest.py
frozen/Adafruit_CircuitPython_UC8151D/: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.rst  README.rst.license  adafruit_uc8151d.py  pyproject.toml  requirements.txt
frozen/Adafruit_CircuitPython_UC8151D/.github/PULL_REQUEST_TEMPLATE/: adafruit_circuitpython_pr.md
frozen/Adafruit_CircuitPython_UC8151D/.github/workflows/: failure-help-text.yml  release.yml
frozen/Adafruit_CircuitPython_UC8151D/docs/: api.rst  conf.py  examples.rst  index.rst
frozen/Adafruit_CircuitPython_UC8151D/examples/: display-ruler.bmp.license  uc8151d_grayscale_test.py  uc8151d_simpletest.py
lib/sdmmc/: CMakeLists.txt  sdmmc_cmd.c  sdmmc_common.c  sdmmc_common.h  sdmmc_init.c  sdmmc_io.c  sdmmc_mmc.c  sdmmc_sd.c
lib/sdmmc/include/: sdmmc_cmd.h  sdmmc_defs.h  sdmmc_types.h
lib/sdmmc/test/: CMakeLists.txt  component.mk  test_sd.c  test_sdio.c
mpy-cross/: .gitignore  .gitignore 2  Kconfig  Makefile  Makefile.fuzz  Makefile.m1  Makefile.static  Makefile.static-aarch64  Makefile.static-mingw  Makefile.static-raspbian  Makefile.wasm  README.md  fmode.c  fmode.h  gccollect.c  library.js  main.c  mpconfigport.h  mpconfigport_common.h  mpconfigport_wasm.h  mphalport.h  mpy-cross-3.x-macos-high-sierra  mpy-cross.mk  mpy-cross.vcxproj  pyproject.toml  qstrdefsport.h  requirements.txt  wasm.c
mpy-cross/mpy_cross/: __init__.py  __main__.py  compiler.py  compiler_native.py  compiler_pywasm3.py  compiler_wasmer.py  compiler_wasmtime.py  main.py
tools/mpremote/: .coverage  .gitignore  LICENSE  MANIFEST.in  README.md  mpremote.py  package_tools.py  pyproject.toml  requirements.txt  setup.cfg
tools/mpremote/mpremote/: __init__.py  commands.py  compression_utils.py  config.py  console.py  main.py  mapfs.py  mip.py  mp_errno.py  pyboardextended.py  repl.py  romfs.py  transport.py  transport_serial.py
tools/mpremote/tests/: README.md  _test_mount_readinto_array.py  conftest.py  mpy_mount_write_array.py  ramdisk.py  run-mpremote-tests.py  run-mpremote-tests.sh  shared_utils.py  sitecustomize.py  test_basic.sh  test_basic.sh.exp  test_equals_sign.py  test_errno.sh  test_errno.sh.exp  test_eval_exec_run.sh  test_eval_exec_run.sh.exp  test_filesystem.sh  test_filesystem.sh.exp  test_filesystem_rm.sh  test_filesystem_rm.sh.exp  test_filesystem_rm_root.sh  test_filesystem_rm_root.sh.exp  test_fs_tree.sh  test_fs_tree.sh.exp  test_mip.py  test_mip_local_download.sh  test_mip_local_download.sh.exp  test_mip_local_install.sh  test_mip_local_install.sh.exp  test_mount.sh  test_mount.sh.exp  test_powershell.ps1  test_recursive_cp.sh  test_recursive_cp.sh.exp  test_repl_newlines.py  test_resume.sh  test_resume.sh.exp  test_unicode.py  test_unicode.sh  test_unicode.sh.exp  (+3 more)
(+29953 files in other folders)
