

cmake_minimum_required(VERSION 3.10)

PROJECT(test_tvm)

INCLUDE_DIRECTORIES(
        ../.. .
)

ADD_EXECUTABLE(${PROJECT_NAME} test-tvm.c)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/libtvm.a)

ADD_DEFINITIONS(-DNO_QSTR)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
