[build-system]
requires = [
    "hatchling",
    "hatch-requirements-txt",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "mpremote"
description = "Tool for interacting remotely with MicroPython devices"
readme = "README.md"
authors = [
    {name = "Damien George", email = "damien@micropython.org"},
]
urls = {Homepage = "https://github.com/micropython/micropython"}
keywords = [
    "hardware",
    "micropython",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.4"
dynamic = ["dependencies", "version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pexpect",
    "coverage",
    "pytest-cov",
]

[project.scripts]
mpremote = "mpremote.main:main"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

# This will be PEP-440 normalised into either:
# mpremote-X.Y.Z (on vX.Y.Z release tag)
# mpremote-X.Y.Zrc0 (on vX.Y.Z-preview tag, i.e. first commit in the cycle)
# mpremote-X.Y.Zrc0.postN+gHASH (N commits past vX.Y.Z-preview tag)
# mpremote-X.Y.Zrc0.postN+gHASH.dDATE (N commits past vX.Y.Z-preview tag, dirty)
[tool.hatch.version]
source = "vcs"
tag-pattern = "(?P<version>v(\\d+).(\\d+).(\\d+)(-preview)?)"
raw-options = { root = "../..", version_scheme = "post-release" }

[tool.hatch.build]
packages = ["mpremote"]

[tool.hatch.build.targets.sdist.force-include]
"requirements.txt" = "requirements.txt"


[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/reference/reference.html#ini-options-ref
# --cov: enable coverage (source is set in [tool.coverage.run])
# --cov-context=test: each test gets its own context for scenario tracking
addopts = "--cov --cov-context=test --cov-report=term"
testpaths = [
    "tests",
]



[tool.coverage.run]
# parallel = true enables collection of coverage from subprocesses
# This is for coverage data collection, not pytest parallelization
parallel = true
source = ["mpremote"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
# Show contexts in HTML report - see which scenarios covered each line
show_contexts = true

[tool.coverage.json]
# Include contexts in JSON report for programmatic analysis
show_contexts = true

