[metadata]
name = mpremote
version = 0.0.6
author = Damien George
author_email = damien@micropython.org
description = Tool for interacting remotely with MicroPython
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/micropython/micropython
project_urls =
    Bug Tracker = https://github.com/micropython/micropython/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = mpremote
python_requires = >= 3.4
install_requires =
    pyserial >= 3.3

[options.entry_points]
console_scripts =
  mpremote = mpremote.main:main
